Fix spacing on profile page

--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -81,3 +81,12 @@ label {
 .full-width {
 	width: 100%;
 }
+
+.overflow-hidden {
+	overflow: hidden;
+}
+
+.inline {
+	display: inline;
+}
+
